====================================================
               INScore - Change log
----------------------------------------------------
GRAME - Centre national de creation musicale
http://www.grame.fr
====================================================
Copyright GRAME (c) 2009-2015
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR 
(ANR-08-CORD-010 - ANR-12-CORD-0009)
====================================================

----------------------------------------------------
Version 1.20
- the 'events' system has been extended to any object attribute and supports user defined events.
  This change comes also with a one tick delay introduced to handle all the events (i.e. the 
  event associated messages are processed by the next time task): this is intended to avoid
  freezing the system in case of loops.
- lua support has been dropped (compilation was optional, never embedded into a distribution)
- parser strategy changed: now each message is processed one by one to ensure the system
  consistency, especially for message based variables: an object state remains now consistent 
  from one message to another.
- new 'radius' message supported by rectangles.
- new 'edit' message supported by all objects: opens a small editor.
- new 'level' message supported by the log window and extended debugging support.
- new video specific messages and management: the video time is now independent from the 
  inscore object time. 
- gmn objects set: output correct error message in case of syntax error
- save msg output changed: a scene emit the 'new' message, static info nodes (log, stat, javascript...)
- bug in debug name corrected (was not removed from graphic space)
- bug in polygon position corrected (was not centered on 0 0) - use /ITL compatibility 
  to preserve previous behaviour
- crash bug corrected: occured when lauching inscore from a secondary screen
